# modules/jet-process-backend/jet-process-rs/jet-process-rs-impl/src/main/java/io/jetprocess/internal/resource/v1_0/BaseSecondaryHeadRsModelResourceImpl.java
@@ -56,7 +56,7 @@ public abstract class BaseSecondaryHeadRsModelResourceImpl
 	/**
 	 * Invoke this method with the command line:
 	 *
-	 * curl -X 'GET' 'http://localhost:8080/o/jet-process-rs/v1.0/SecondaryHead'  -u 'test@liferay.com:test'
+	 * curl -X 'GET' 'http://localhost:8080/o/jet-process-rs/v1.0/secondaryhead'  -u 'test@liferay.com:test'
 	 */
 	@io.swagger.v3.oas.annotations.Parameters(
 		value = {
@@ -74,7 +74,7 @@ public abstract class BaseSecondaryHeadRsModelResourceImpl
 		}
 	)
 	@javax.ws.rs.GET
-	@javax.ws.rs.Path("/SecondaryHead")
+	@javax.ws.rs.Path("/secondaryhead")
 	@javax.ws.rs.Produces({"application/json", "application/xml"})
 	@Override
 	public Page<SecondaryHeadRsModel> getSeondaryHeadByPrimaryHeadId(
