# modules/jet-process-backend/jet-process-rs/jet-process-rs-impl/src/main/java/io/jetprocess/internal/resource/v1_0/BaseTertiaryHeadRsModelResourceImpl.java
@@ -56,7 +56,7 @@ public abstract class BaseTertiaryHeadRsModelResourceImpl
 	/**
 	 * Invoke this method with the command line:
 	 *
-	 * curl -X 'GET' 'http://localhost:8080/o/jet-process-rs/v1.0/TertiaryHead'  -u 'test@liferay.com:test'
+	 * curl -X 'GET' 'http://localhost:8080/o/jet-process-rs/v1.0/tertiaryhead'  -u 'test@liferay.com:test'
 	 */
 	@io.swagger.v3.oas.annotations.Parameters(
 		value = {
@@ -74,7 +74,7 @@ public abstract class BaseTertiaryHeadRsModelResourceImpl
 		}
 	)
 	@javax.ws.rs.GET
-	@javax.ws.rs.Path("/TertiaryHead")
+	@javax.ws.rs.Path("/tertiaryhead")
 	@javax.ws.rs.Produces({"application/json", "application/xml"})
 	@Override
 	public Page<TertiaryHeadRsModel> getTertiaryHeadBySecondaryHeadId(
